--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "blogify",
+  "name": "superblisher",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^43.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^43.0.0",
+    "@ckeditor/ckeditor5-image": "^43.0.0",
+    "@ckeditor/ckeditor5-react": "^9.0.0",
+    "@ckeditor/ckeditor5-upload": "^43.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.13.0",
+    "firebaseui": "^6.1.0",
+    "froala-editor": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-froala-wysiwyg": "^4.2.1",
+    "react-image-crop": "^11.0.6",
+    "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
