--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,4 +50,5 @@
       "last 1 safari version"
     ]
   }
+
 }
